added everything new

--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
 </head>
 <body>
 
+	<!-- <img src="images/banner-hiking.jpg" alt=""> WANT THIS TO APPEAR IN TABLET/LARGE SCREEN -->
+
 	<header>
-		<img src="images/app-logo.svg" class="logo" alt="">
-		<h1><strong>Trail</strong>Blazer App</h1>
+		<img src="images/trail-logo.jpg" alt="trailblazer">
+		<!-- <img src="images/trail-logo.svg" alt=""> SVG NOT WORKING ANYMORE-->
+		<h1>TrailBlazer App</h1>
 	</header>
 
 	<hr class="hline_color" />
 
 	<div class="description">
-		<p><strong><em>Trailblazer</em></strong> is an app specifically designed for park and trail enthusiasts in Canada. The app will allow access to individual parks, including national and provincial, as well as their entire list of trails.</p>
+		<p><strong><em>Trailblazer</em></strong> is an app specifically designed for park and trail enthusiasts in Canada. The app will allow access to individual parks, including national and provincial, as well as their entire list of trails. <em>Click the video below to preview more information.</em></p>
 	</div>
 
 	<div class="video">
-		<img src="http://placehold.it/302x150">
+		<img src="images/video-placeholder.jpg">
 	</div>
 
 	<div class="button">
@@ -27,32 +30,25 @@
 	</div>
 	
 
+	<div class="carousel">
+		<div class="items">
+			<img src="images/carousel-1-search.jpg" data-state="current" alt="">
+			<img src="images/carousel-map.jpg" alt="">
+			<img src="images/carousel-2.jpg" alt="">
+			<img src="images/carousel-stats1.jpg" alt="">
+			<img src="images/carousel-hiker.jpg" alt="">
+		</div>
+		<div class="carousel-buttons">
+			<button class="next">Next</button>
+			<button class="previous">Previous</button>
+		</div>	
+	</div>
+
+
 
 	<hr class="hline_color2" />
 
 <footer> &#169 Lisa Beaton All Rights Reserved. 2014</footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
