added new css, html, and logo-banner

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 
-	<!-- <img src="images/banner-hiking.jpg" alt=""> WANT THIS TO APPEAR IN TABLET/LARGE SCREEN -->
+	<img src="images/banner-hiking.jpg" class="banner" alt=""> 
 
 	<header>
-		<img src="images/trail-logo.jpg" alt="trailblazer">
+		<img src="images/trail-logo.jpg" class="logo" alt="trailblazer">
 		<!-- <img src="images/trail-logo.svg" alt=""> SVG NOT WORKING ANYMORE-->
 		<h1>TrailBlazer App</h1>
+		<h2>Lets Go Hike®</h2>
 	</header>
 
 	<hr class="hline_color" />
@@ -32,15 +33,15 @@
 
 	<div class="carousel">
 		<div class="items">
-			<img src="images/carousel-1-search.jpg" data-state="current" alt="">
-			<img src="images/carousel-map.jpg" alt="">
-			<img src="images/carousel-2.jpg" alt="">
-			<img src="images/carousel-stats1.jpg" alt="">
-			<img src="images/carousel-hiker.jpg" alt="">
+			<img src="images/carousel-1-search.jpg" data-state="current" alt="Photo of seach services located in the Trailblazer App">
+			<img src="images/carousel-map.jpg" alt="photo of GPS Location Services within TrailBlazer App">
+			<img src="images/carousel-2.jpg" alt="Photo of people hiking">
+			<img src="images/carousel-stats1.jpg" alt="Photo of hikers statistics within Trailblazer app">
+			<img src="images/carousel-hiker.jpg" alt="Photo of a smiling hiker">
 		</div>
 		<div class="carousel-buttons">
-			<button class="next">Next</button>
 			<button class="previous">Previous</button>
+			<button class="next">Next</button>
 		</div>	
 	</div>
 
