so many changes

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 	<img src="images/banner-hiking.jpg" class="banner" alt=""> 
 
 	<header>
-		<img src="images/trail-logo.jpg" class="logo" alt="trailblazer">
+		<img src="images/trail-logo-banner.jpg" class="banner-logo" alt="trailblazer logo">
+		<img src="images/trail-logo.jpg" class="logo" alt="trailblazer logo">
 		<!-- <img src="images/trail-logo.svg" alt=""> SVG NOT WORKING ANYMORE-->
 		<h1>TrailBlazer App</h1>
 		<h2>Lets Go Hike®</h2>
 	</header>
 
 	<hr class="hline_color" />
+
+	<div class="intro">
+		<h4>Introducing your own personal Canadian Park and Trail Guide, to hike and learn your journey, <strong>TrailBlazer</strong> <em>Lets go Hike®</em></h4>
+	</div>
 
 	<div class="description">
 		<p><strong><em>Trailblazer</em></strong> is an app specifically designed for park and trail enthusiasts in Canada. The app will allow access to individual parks, including national and provincial, as well as their entire list of trails. <em>Click the video below to preview more information.</em></p>
@@ -30,11 +35,22 @@
 		<a href="#" class="btn">Buy Now!</a>
 	</div>
 	
+	<div class="button2">
+		<a href="#" class="btn">Buy Now!</a>
+	</div>
+	
+	<div class="button3">
+		<a href="#" class="btn">Buy Now!</a>
+	</div>
+	
+	<div class="title-line">
+		<h3>Discover your Inner <strong>TrailBlazer</strong></h3>
+	</div>
 
 	<div class="carousel">
 		<div class="items">
-			<img src="images/carousel-1-search.jpg" data-state="current" alt="Photo of seach services located in the Trailblazer App">
-			<img src="images/carousel-map.jpg" alt="photo of GPS Location Services within TrailBlazer App">
+			<img src="images/carousel-search1.jpg" data-state="current" alt="Photo of seach services located in the Trailblazer App">
+			<img src="images/carousel-map1.jpg" alt="photo of GPS Location Services within TrailBlazer App">
 			<img src="images/carousel-2.jpg" alt="Photo of people hiking">
 			<img src="images/carousel-stats1.jpg" alt="Photo of hikers statistics within Trailblazer app">
 			<img src="images/carousel-hiker.jpg" alt="Photo of a smiling hiker">
