added carousel buttons

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			<img src="images/carousel-hiker.jpg" alt="Photo of a smiling hiker">
 		</div>
 		<div class="carousel-buttons">
-			<button class="previous">Previous</button>
-			<button class="next">Next</button>
+			<button class="previous">&#8592</button>
+			<button class="next">&#8594</button>
 		</div>	
 	</div>
 
