fixed chrome hover

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	<hr class="hline_color2" />
 
-<footer> &#169 Lisa Beaton All Rights Reserved. 2014</footer>
+<footer> &#169 Lisa Beaton, TrailBlazer&trade; All Rights Reserved. 2014</footer>
 
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
