added newest css and html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 	<div class="video">
 		<img src="images/video-placeholder.jpg">
 	</div>
+	
+	
+	<img class="cloud1" src="images/cloud1.svg" alt="">
+	<img class="cloud2" src="images/cloud2.svg" alt="">
+	
+	<section class="sun-section">
+	<img class="sun" src="images/sun.svg" alt="">
+	</section>
+
+
+ <section class="dipper-section">
+	<img class="dipper" src="images/trees.svg" alt="">
+</section>
 
 	<div class="button">
 		<a href="#" class="btn">Buy Now!</a>
@@ -68,16 +81,17 @@
 		</div>	
 	</div>
 	 
-
-
+	 
 
 	<hr class="hline_color2" />
 
-<footer> &#169 Lisa Beaton, TrailBlazer&trade; All Rights Reserved. 2014</footer>
+<footer> &#169 Lisa Beaton, <em>TrailBlazer App, Lets Go Hike&trade;</em> All Rights Reserved. 2014</footer>
 
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="js/dialog-polyfill.js"></script>
+<script src="js/waypoints.min.js"></script>
+<script src="js/animations.js"></script>
 <script src="js/main.js"></script>
 
 </body>
