added cloud animations

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
 		<img src="images/video-placeholder.jpg">
 	</div>
 	
-	
+<section class="cloud-section">	
+	<div class="cloud-wrapper">
 	<img class="cloud1" src="images/cloud1.svg" alt="">
+	</div>
+	<div class="cloud-wrapper2">
 	<img class="cloud2" src="images/cloud2.svg" alt="">
+	</div>
+</section>
+
 	
 	<section class="sun-section">
 	<img class="sun" src="images/sun.svg" alt="">
